# Sim

./: .gitignore  CMakeLists.txt  main.cpp
Sim/: Gfuncs.cpp  Gfuncs.hpp  Sim.cpp  Sim.hpp  helper.hpp  opdefs.hpp
elf_examples/: a.out
